@@ -112,7 +112,7 @@ aol_toc_signon(EMessengerBackend *b, const char *name, const char *password,
 	if (b->listener)
 		g_warning("There is already a listener for backend %p\n", b);
 			  
-	b->listener = listener;
+	b->listener = bonobo_object_dup_ref(listener, NULL);
 
 	conn = toc_connection_new();
 	gtk_object_set_user_data(GTK_OBJECT(conn), g_strdup(name));
